--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,31 @@
 span,
 input {
-  border: 2px solid rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
   font-size: 1.75em;
   padding: .25em .5em .3125em;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   border-radius: .25em;
   background: transparent;
   -webkit-transition: all .100s;
   transition: all .100s;
 }
+hr{
+
+  color: blue;
+}
 
 p{
-    color: rgb(202, 118, 69);
-    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    margin-left: 40px;
     font-family: cursive;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 
 span:focus,
 input:focus {
   outline: none;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   border-color: rgb(255, 255, 255);
 }
 span.keyup,
@@ -30,15 +34,6 @@ input.keyup {
   border-color: white;
   text-shadow: 0 0 .125em white;
   box-shadow: 0 0 .25em white,inset 0 0 .25em white;
-}
-
-canvas {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  pointer-events: none;
 }
 
 input {
@@ -82,8 +77,57 @@ input:focus:-ms-input-placeholder {
 input {
   position: fixed;
   box-sizing: border-box;
-  bottom: 4em;
-  left: 50%;
-  width: 16em;
+  bottom: 2em;
+  left: 40%;
+  width: 20em;
   margin-left: -5.5em;
 }
+
+hr.sep-1 {
+  position: relative;
+  display: block;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  height: 3px;
+  border:none;
+  background: linear-gradient(to right, transparent 50%, #fff 50%), linear-gradient(to right, #00b9ff, #59d941);
+  background-size: 1.5rem, 100%;
+  transform: rotate(-5deg);
+  transform-origin: 50% 0%;
+}
+
+hr.sep-1::after {
+  font-family: 'FontAwesome';
+  content: '\f061     \f1cb     \f060';
+  white-space: pre;
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  transform: translate(-50%, -50%);
+  transform-origin: 50% 50%;  
+  background-image: linear-gradient(to right, #00b9ff, #59d941);
+  padding: 0 1em;
+  color: transparent;
+  -webkit-background-clip: text;
+}
+hr.sep-1::before {
+  content: '';
+  width: 5rem;
+  height: 1rem;
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: 50% 50%;
+  background-color: white;
+}
+
+
+
+
+
+
+
